stop overflowing of tags

--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -66,7 +66,8 @@ body {
   // Remove padding
   &--no-padding {
     padding: 0;
-    flex: 1 0 auto;
+    flex: 1;
+    -ms-flex: 1 1 auto;
   }
 
   // Full width
